@@ -28,6 +28,7 @@
 #include "fail-open.h"
 #include "guarded-list.h"
 #include "hmapx.h"
+#include "json.h"
 #include "lacp.h"
 #include "learn.h"
 #include "mac-learning.h"
@@ -6519,8 +6520,99 @@ done:
     return changed;
 }
 
+static struct json *
+dpif_show_backer_json(struct json *backers, const struct dpif_backer *backer)
+{
+    struct json *json_backer = json_object_create();
+
+    /* Add datapath as new JSON object using its name as key. */
+    json_object_put(backers, dpif_name(backer->dpif), json_backer);
+
+    /* Add datapath's stats under "stats" key. */
+    struct dpif_dp_stats dp_stats;
+    struct json *json_dp_stats = json_object_create();
+
+    json_object_put(json_backer, "stats", json_dp_stats);
+    dpif_get_dp_stats(backer->dpif, &dp_stats);
+    json_object_put_format(json_dp_stats, "n_hit", "%"PRIu64, dp_stats.n_hit);
+    json_object_put_format(json_dp_stats, "n_missed", "%"PRIu64,
+                           dp_stats.n_missed);
+
+    /* Add datapath's bridges under "bridges" key. */
+    struct json *json_dp_bridges = json_object_create();
+    json_object_put(json_backer, "bridges", json_dp_bridges);
+
+    struct shash ofproto_shash;
+    shash_init(&ofproto_shash);
+    const struct shash_node **ofprotos = get_ofprotos(&ofproto_shash);
+    for (size_t i = 0; i < shash_count(&ofproto_shash); i++) {
+        struct ofproto_dpif *ofproto = ofprotos[i]->data;
+
+        if (ofproto->backer != backer) {
+            continue;
+        }
+
+        struct json *json_ofproto = json_object_create();
+        /* Add bridge to "bridges" dictionary using its name as key. */
+        json_object_put(json_dp_bridges, ofproto->up.name, json_ofproto);
+
+        /* Add bridge ports to the current bridge dictionary. */
+        const struct shash_node **ports;
+        ports = shash_sort(&ofproto->up.port_by_name);
+        for (size_t j = 0; j < shash_count(&ofproto->up.port_by_name); j++) {
+            const struct shash_node *port = ports[j];
+            struct ofport *ofport = port->data;
+
+            struct json * json_ofproto_port = json_object_create();
+            /* Add bridge port to a bridge's dict using port name as key. */
+            json_object_put(json_ofproto, netdev_get_name(ofport->netdev),
+                            json_ofproto_port);
+            /* Add OpenFlow port associated with a bridge port. */
+            json_object_put_format(json_ofproto_port, "ofport", "%u",
+                                   ofport->ofp_port);
+
+            /* Add bridge port number. */
+            odp_port_t odp_port = ofp_port_to_odp_port(ofproto,
+                                                       ofport->ofp_port);
+            if (odp_port != ODPP_NONE) {
+                json_object_put_format(json_ofproto_port, "port_no",
+                                       "%"PRIu32, odp_port);
+            } else {
+                json_object_put_string(json_ofproto_port, "port_no", "none");
+            }
+
+            /* Add type of a bridge port. */
+            json_object_put_string(json_ofproto_port, "type",
+                                   netdev_get_type(ofport->netdev));
+
+            /* Add config entries for a bridge port. */
+            struct json *json_port_config = json_object_create();
+            struct smap config;
+            smap_init(&config);
+
+            json_object_put(json_ofproto_port, "config", json_port_config);
+            if (!netdev_get_config(ofport->netdev, &config)) {
+                struct smap_node *node;
+
+                SMAP_FOR_EACH (node, &config) {
+                    json_object_put_string(json_port_config, node->key,
+                                           node->value);
+                }
+            }
+            smap_destroy(&config);
+
+        } /* End of bridge port(s). */
+
+        free(ports);
+    } /* End of bridge(s). */
+    shash_destroy(&ofproto_shash);
+    free(ofprotos);
+
+    return json_backer;
+}
+
 static void
-dpif_show_backer(const struct dpif_backer *backer, struct ds *ds)
+dpif_show_backer_text(const struct dpif_backer *backer, struct ds *ds)
 {
     const struct shash_node **ofprotos;
     struct dpif_dp_stats dp_stats;
@@ -6587,18 +6679,24 @@ static void
 ofproto_unixctl_dpif_show(struct unixctl_conn *conn, int argc OVS_UNUSED,
                           const char *argv[] OVS_UNUSED, void *aux OVS_UNUSED)
 {
-    struct ds ds = DS_EMPTY_INITIALIZER;
-    const struct shash_node **backers;
-    int i;
+    if (unixctl_command_get_output_format(conn) == UNIXCTL_OUTPUT_FMT_JSON) {
+        struct json *backers = json_object_create();
+        const struct shash_node *backer;
+        SHASH_FOR_EACH (backer, &all_dpif_backers) {
+            dpif_show_backer_json(backers, backer->data);
+        }
+        unixctl_command_reply_json(conn, backers);
+    } else {
+        struct ds ds = DS_EMPTY_INITIALIZER;
+        const struct shash_node **backers = shash_sort(&all_dpif_backers);
+        for (int i = 0; i < shash_count(&all_dpif_backers); i++) {
+            dpif_show_backer_text(backers[i]->data, &ds);
+        }
+        free(backers);
 
-    backers = shash_sort(&all_dpif_backers);
-    for (i = 0; i < shash_count(&all_dpif_backers); i++) {
-        dpif_show_backer(backers[i]->data, &ds);
+        unixctl_command_reply(conn, ds_cstr(&ds));
+        ds_destroy(&ds);
     }
-    free(backers);
-
-    unixctl_command_reply(conn, ds_cstr(&ds));
-    ds_destroy(&ds);
 }
 
 static void
